--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "devDependencies": {
     "@unocss/preset-mini": "^66.4.2",
     "@unocss/preset-web-fonts": "^66.4.2",
+    "@unocss/preset-wind4": "^66.4.2",
+    "@unocss/reset": "^66.4.2",
     "unocss": "^66.4.2"
   }
 }
