uno: add transformer directives

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@unocss/preset-web-fonts": "^66.4.2",
     "@unocss/preset-wind4": "^66.4.2",
     "@unocss/reset": "^66.4.2",
+    "@unocss/transformer-directives": "^66.5.0",
     "unocss": "^66.4.2"
   }
 }
